# icforge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  render.yaml
.hermes/plans/: 2026-04-02-v0.1-hello-world-deploy.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_candid_interface.sql  003_unique_slug.sql  004_github_app_build_pipeline.sql  005_deploy_repo_full_name.sql  006_build_job_commit_message.sql  007_deployment_build_job_id.sql  008_canister_recipe.sql  009_per_canister_jobs.sql  010_drop_canister_type.sql  011_unify_deployments.sql  012_deploy_logs_phase.sql  013_billing.sql  014_canister_topups.sql  015_extended_cycles_snapshots.sql  016_auto_topup_always_on.sql  017_memory_metrics_breakdown.sql  018_canister_logs.sql  019_stripe_customer_id_by_mode.sql  20250101000000_initial.sql
backend/src/: auth.rs  billing.rs  build_worker.rs  cloudflare.rs  compute_poller.rs  config.rs  db.rs  deploy.rs  deploy_worker.rs  error.rs  exchange_rate.rs  github.rs  ic_client.rs  identity.rs  log_poller.rs  main.rs  models.rs  routes.rs  webhooks.rs
cli/: check_balance.mjs  package.json
cli/src/: api.ts  auth.ts  config.ts  index.ts
cli/src/commands/: deploy.ts  init.ts  (+4 more)
cloudflare-worker/: worker.js  wrangler.toml
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml
dashboard-tmp/: index.html  package.json
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
shared/: package.json
shared/src/: types.ts
specs/: 001-architecture.md  002-subdomain-routing.md  003-backend-canister-support.md  004-multi-canister-projects.md  005-deploy-status-log-streaming.md  006-dashboard.md  007-stripe-billing.md  008-build-pipeline.md  008-github-actions-deploy.md  008-github-app.md  008-status-feedback.md  009-custom-domains.md  010-cycles-monitoring.md  011-canister-eject.md  011-identity-export.md  012-subnet-selection.md  013-preview-deployments.md  014-team-org-accounts.md  015-framework-auto-detection.md  016-link-existing-canisters.md  017-canister-metrics-dashboard.md  018-log-aggregation.md
specs/019-dashboard-ux-polish/: 00-setup.md  01-design-system.md  02-navigation.md  03-project-list.md  04-project-detail.md  05-deploy-detail.md  06-settings.md  07-landing.md  08-technical-debt.md  09-data-layer.md  README.md
specs/020-icp-cli-migration/: 01-build-delegation.md  02-deploy-delegation.md  03-asset-sync-delegation.md  04-cli-simplification.md  05-icp-yaml-alignment.md  README.md
specs/021-unify-deployments/: 01-database-migration.md  02-backend-changes.md  03-dashboard-changes.md  04-cli-changes.md  05-rollout.md  README.md
(+58 files in other folders)
