[package]
name = "icforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }

# IC-specific
# ic-agent = "0.39"      # TODO: uncomment when implementing IC integration
# candid = "0.10"

# Auth & billing
# jsonwebtoken="***"
# stripe-rust = "0.39"
