[package]
name = "icforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

# Auth
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# IC-specific
ic-agent = { version = "0.47", features = ["pem"] }
ic-utils = "0.47"
ic-asset = "0.29"
candid = "0.10"
slog = "2"
ring = "0.17"
pem = "3"
flate2 = "1"
tar = "0.4"
