[package]
name = "icforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

# Auth
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# IC-specific
ic-agent = { version = "0.47", features = ["pem"] }
candid = "0.10"
hex = "0.4"

# GitHub App / webhook auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1.3"
dashmap = "6"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
